Kubernetes-2025/11-Security-Certificate/11.4-NetworkPolicy/Block-Ingress-Traffice.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
